--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.31.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.1",
     "swiper": "^8.1.5",
     "web-vitals": "^2.1.4"
