--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.1",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.1.5",
     "web-vitals": "^2.1.4"
   },
